add logout route.
